# mistral-ai-sdk

./: .gitignore  Cargo.toml  PROJECT_STATISTICS.md  README.md  data.txt
.vibe/skills/: git_commit_enforcement.md  model_discovery.md
examples/: .env.example  README.md  agent_management.rs  audio_transcription.rs  batch_job.rs  chat_completion.rs  conversations.rs  data.txt  document_library.rs  embeddings.rs  file_upload.rs  fim_completion.rs  fine_tuning.rs  models_list.rs  moderations.rs  ocr_document.rs  text_classification.rs
src/: error.rs  lib.rs
src/api/: agents.rs  audio.rs  batch.rs  chat.rs  classifications.rs  conversations.rs  embeddings.rs  files.rs  fim.rs  fine_tuning.rs  libraries.rs  mod.rs  models.rs  moderations.rs  ocr.rs
src/client/: builder.rs  mod.rs  rate_limiter.rs  retry.rs
src/error/: mod.rs
src/models/: base_model.rs  capabilities.rs  ft_model.rs  mod.rs
