[package]
name = "mistral-ai-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Mistral Vibe <vibe@mistral.ai>", "Damien Castelltort <damien@castelltort.com>"]
description = "Async Rust SDK for Mistral AI API"
license = "Apache-2.0"
repository = "https://github.com/mistralai/mistral-ai-sdk"
keywords = ["mistral", "ai", "async", "api", "sdk"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0" # For examples

# UUID generation
uuid = { version = "1.4", features = ["v4"] }

# Rate limiting (optional feature)
tokio-rate-limit = { version = "0.3", optional = true }

[features]
default = []
rate-limiting = ["tokio-rate-limit"]

[dev-dependencies]
# Testing
mockito = "1.0"
tokio-test = "0.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]